WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148331
DFG::PutStackSinkingPhase doesn't need to emit KillStack nodes
https://bugs.webkit.org/show_bug.cgi?id=148331
Summary
DFG::PutStackSinkingPhase doesn't need to emit KillStack nodes
Filip Pizlo
Reported
2015-08-21 14:35:51 PDT
PutStackSinkingPhase currently emits KillStack nodes when it sinks a PutStack. This isn't necessary because KillStack is only interesting for OSR exit, and PutStack nodes that are relevant to OSR will already be preceded by a KillStack/MovHint pair.
Attachments
the patch
(2.04 KB, patch)
2015-08-21 14:37 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-08-21 14:37:43 PDT
Created
attachment 259660
[details]
the patch
Geoffrey Garen
Comment 2
2015-08-21 14:39:25 PDT
Comment on
attachment 259660
[details]
the patch r=me
Filip Pizlo
Comment 3
2015-08-21 14:44:46 PDT
Landed in
http://trac.webkit.org/changeset/188776
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug