DFG::PutStackSinkingPhase doesn't need to emit KillStack nodes https://bugs.webkit.org/show_bug.cgi?id=148331

Reviewed by Geoffrey Garen.

PutStackSinkingPhase previously emitted a KillStack node when it sank a PutStack. This
isn't necessary because KillStack is only interesting for OSR exit, and PutStack nodes
that are relevant to OSR will already be preceded by a KillStack/MovHint pair.

* dfg/DFGPutStackSinkingPhase.cpp:



Canonical link: https://commits.webkit.org/166424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188776 268f45cc-cd09-0410-ab3c-d52691b4dbfc